--- a/linker-service/src/main/resources/application.properties
+++ b/linker-service/src/main/resources/application.properties
@@ -8,9 +8,9 @@ mybatis.type-aliases-package=com.linker.model
 
 #datasource
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://xxxx:3306/xxxx?serverTimezone=UTC&characterEncoding=utf-8&useSSL=false
-spring.datasource.username=xxxx
-spring.datasource.password=xxxx
+spring.datasource.url=jdbc:mysql://db.pokerbean.xyz:3306/linker?serverTimezone=UTC&characterEncoding=utf-8&useSSL=false
+spring.datasource.username=linker
+spring.datasource.password=linker
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 #连接池的配置信息
 spring.datasource.initialSize=5
